# make-cmake-study

./: .gitignore  CMakeLists_sdl_opengl.txt  README.md
_notes/: 00-instal-setup.md  01-cmake-commands.md  02-cmake-variables.md  03-use-lib.md  cmake-check-lib.md  cmake-output-dir.md  cmake-use-local-cmake.md
cpp/: Make
make/: MakeFile_c_sample  MakeFile_cpp_sample  MakeFile_sdl_opengl copy  MakeFile_single_file copy  MakeFile_single_file_opengl
opencv/: CMake-opencv.txt
opgl/: CMakeLists-cross-platform.txt  CMakeLists-sdl-glew.txt  Makefile-obj-exe  Makefile-opgl-glfw-glew  Makefile-opgl-imgui  Makefile-simple  Makefile-soil  README.md
qt/: CMakeLists-sample-2.txt  CMakeLists.txt
smaple-create-lib/: CMakeLists.txt  README.md
smaple-create-lib/src/: hello.cpp  main.cpp
smaple1/: CMakeLists.txt
smaple1/include/: hello.h
